[gd_scene load_steps=4 format=3 uid="uid://c6p28u6c60g45"]

[ext_resource type="Script" path="res://Scripts/DraggableUI.gd" id="1_xno77"]
[ext_resource type="Texture2D" uid="uid://3bvu5fwns8cd" path="res://Images/VisibleIcon.png" id="2_uyma2"]
[ext_resource type="Texture2D" uid="uid://3ku81yg2iwyo" path="res://Images/Resize.png" id="3_jw0e6"]

[node name="DraggableUi" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_xno77")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 192.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "WINDOW LABEL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Hide" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -12.0
offset_right = -8.0
offset_bottom = 12.0
focus_mode = 0
toggle_mode = true
icon = ExtResource("2_uyma2")

[node name="Item" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 3.2
offset_top = 8.0

[node name="PanelContainer" type="PanelContainer" parent="Panel/Item"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0

[node name="Resize" type="TextureRect" parent="Panel/Item"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -26.0
offset_top = -22.0
offset_right = -2.0
offset_bottom = -1.99998
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("3_jw0e6")

[connection signal="gui_input" from="Panel" to="." method="_on_panel_gui_input"]
[connection signal="toggled" from="Panel/Hide" to="." method="_on_hide_toggled"]
[connection signal="gui_input" from="Panel/Item/Resize" to="." method="_on_resize_gui_input"]
